<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/editText_setPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/input_tip"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/re_password" />

        <EditText
            android:id="@+id/editText_setpassword_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/input_tip_again" />
    </LinearLayout>

    <Button
        android:id="@+id/button_setPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_setPassword" />

    <Button
        android:id="@+id/button_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_skip" />

</LinearLayout>