<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edittext_register_phonenumber"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:hint="@string/enter_phone"
        android:imeOptions="actionGo"
        android:inputType="phone"
        android:maxLength="40" >
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_register_getcode"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/getcode" >
        </Button>

        <EditText
            android:id="@+id/edittext_register_code"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint=""
            android:imeOptions="actionSearch"
            android:inputType="number|text"
            android:maxLength="6" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/editText_setPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/input_tip"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/re_password" />

        <EditText
            android:id="@+id/editText_setpassword_again"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/input_tip_again"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/register" >
    </Button>

</LinearLayout>