<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partyname"
            android:textSize="20sp" >
        </TextView>

        <TextView
            android:id="@+id/textview_show_partyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduction"
            android:textSize="20sp" >
        </TextView>

        <TextView
            android:id="@+id/textview_show_introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/function"
            android:textSize="20sp" >
        </TextView>

        <TextView
            android:id="@+id/textview_show_function"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="20sp" >
        </TextView>

        <TextView
            android:id="@+id/textview_show_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TextView>
    </LinearLayout>

    <TextView
        android:id="@+id/textview_QRcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/QRcode"
        android:textSize="20sp" >
    </TextView>

    <Button
        android:id="@+id/button_join_thisParty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/joinparty" />

    <ImageView
        android:id="@+id/imageview_show_QRcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name" >
    </ImageView>

</LinearLayout>