<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_reset_information"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/information" >
    </Button>

    <Button
        android:id="@+id/button_user_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/list" >
    </Button>

    <Button
        android:id="@+id/button_write_NFC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_write_NFC" />

</LinearLayout>