<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partyname"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:id="@+id/edittext_set_partyName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduction"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:id="@+id/edittext_set_introduction"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/function"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:id="@+id/edittext_set_function"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/button_save_party"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" >
    </Button>

</LinearLayout>